<resources>
    <string name="app_name">DEmaRJ</string>
    <string name="alt">img</string>
    <string name="page_title">Page Title</string>
    <string name="page_subtitle">Page Subtitle</string>
    <string name="profile_name">Daniel Wijaya</string>
    <string name="profile_email">daniel.wijaya@gmail.com</string>
    <string name="profile_phone">081234567890</string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="section_title">Section Title</string>
    <string name="store_name">Store Name</string>
    <string name="po_name">PO Name</string>
    <string name="po_price">Rp20.000</string>
    <string name="end_date">20 Juni 2024</string>
    <string name="no_po">No Pre Order Available</string>
    <string name="no_order">No Order</string>
    <string name="no_history">No History</string>
    <string name="you_have_no_pre_order">You have no Pre Order</string>
    <string name="no_notification">No Notification</string>
</resources>