<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".fragments.ProfileFragment">

<!--    <ProgressBar-->
<!--        android:id="@+id/loadingBar"-->
<!--        style="?android:attr/progressBarStyleLarge"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:indeterminateDrawable="@drawable/maskot_rotate"-->
<!--        android:layout_gravity="center"-->
<!--        android:indeterminate="true" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSectionTitle">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@drawable/background_profile" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgProfile"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_centerVertical="true"
                android:src="@drawable/dummy_profile"
                android:contentDescription="@string/alt"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <View
                android:id="@+id/space"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:layout_toEndOf="@id/imgProfile" />

            <LinearLayout
                android:id="@+id/profileInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/space"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:textSize="24sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/user_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/sign_out_bttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/profileInfo"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/acme"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:text="@string/sign_out"
                android:textColor="@color/green"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/acme"
            android:text="@string/section_title"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintBottom_toTopOf="@id/sectionContainer"/>

        <FrameLayout
            android:id="@+id/sectionContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSectionTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>